2024-11-15T00:39:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11848034158 # 650
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-15
* notice: last 14d: unq all: 15 39
* notice: prev accum: outdated-unq outdated-all / unq all: 871 4719 / 885 4757
* notice: next accum: outdated-unq outdated-all / unq all: 871 4719 / 886 4758
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2024-11-14]

2024-11-14T12:14:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11836960763 # 649
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-14
* notice: last 14d: unq all: 14 38
* notice: prev accum: outdated-unq outdated-all / unq all: 871 4719 / 884 4754
* notice: next accum: outdated-unq outdated-all / unq all: 871 4719 / 885 4757
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2024-11-14]

2024-11-14T00:36:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11828392345 # 648
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-14
* notice: last 14d: unq all: 13 35
* notice: prev accum: outdated-unq outdated-all / unq all: 866 4707 / 883 4750
* notice: next accum: outdated-unq outdated-all / unq all: 871 4719 / 884 4754
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [2024-10-30] / [2024-11-13]

2024-11-12T12:14:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11797015648 # 645