@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-11-15T00:39:06Z",
+  "timestamp" : "2024-11-15T12:14:19Z",
   "count_outdated" : 4719,
   "uniques_outdated" : 871,
-  "count" : 4758,
-  "uniques" : 886,
+  "count" : 4759,
+  "uniques" : 887,
   "views" : [
     {
       "timestamp": "2024-11-01T00:00:00Z",
@@ -94,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-11-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
