@@ -1,6 +1,6 @@
 {
-  "count": 39,
-  "uniques": 15,
+  "count": 40,
+  "uniques": 16,
   "views": [
     {
       "timestamp": "2024-11-01T00:00:00Z",
@@ -51,6 +51,11 @@
       "timestamp": "2024-11-14T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-11-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
