@@ -1,3 +1,12 @@
+2024-11-15T12:14:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11856057072 # 651
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-15
+* notice: last 14d: unq all: 16 40
+* notice: prev accum: outdated-unq outdated-all / unq all: 871 4719 / 886 4758
+* notice: next accum: outdated-unq outdated-all / unq all: 871 4719 / 887 4759
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-11-15]
+
 2024-11-15T00:39:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11848034158 # 650
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-15
